# simple-wikipedia-dataset

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  prompts.yaml  pyproject.toml  run.py  run_config.yaml
notebooks/: convert_to_markdown.ipynb  explore_data.ipynb  parallel.ipynb
notebooks/old/: test_openrouter.ipynb  test_openrouter_parallel.ipynb
src/: convert_to_markdown.py  database.py  download_wiki_file.py  format_wiki_text.py  process_file.py
src/utils/: database.py
